# algorithms

./: .gitignore  README.md  pom.xml
c-algorithms/: CMakeLists.txt  pom.xml
c-algorithms/src/main/c++/: .gitignore  CMakeLists.txt  Solution.cpp  Solution.h
cpp-solutions/: CMakeLists.txt  pom.xml
cpp-solutions/src/main/c++/: CMakeLists.txt  Solution.cpp  Solution.h
cpp-solutions/src/main/c++/array/: DivideArrayIntoArraysWithMaxDifference.cpp  DivideArrayIntoArraysWithMaxDifference.h  FindSubarraysWithEqualSum.cpp  FindSubarraysWithEqualSum.h  Finding3DigitEvenNumbers.cpp  Finding3DigitEvenNumbers.h  GetMaximumInGeneratedArray.cpp  GetMaximumInGeneratedArray.h  IncreasingTripletSubsequence.cpp  IncreasingTripletSubsequence.h  MaximumSumWithExactlyKElements.h  MedianOfTwoSortedArrays.cpp  NumberOfAdjacentElementsWithTheSameColor.cpp  NumberOfAdjacentElementsWithTheSameColor.h
cpp-solutions/src/main/c++/bfs/: NearestExitFromEntranceInMaze.h
cpp-solutions/src/main/c++/binarysearch/: CuttingRibbons.cpp  CuttingRibbons.h  LeftmostColumnWithAtLeastAOne.h  MinimumOperationsToMakeAllArrayElementsEqual.cpp  MinimumOperationsToMakeAllArrayElementsEqual.h
cpp-solutions/src/main/c++/design/: OrderedStream.h  TicTacToe.cpp  ZigzagIterator.cpp  ZigzagIterator.h
cpp-solutions/src/main/c++/dfs/: AllPathsFromSourceToTarget.cpp  CheckKnightTourConfiguration.cpp  CountServersThatCommunicate.cpp  CountServersThatCommunicate.h  CountSubIsland.cpp  CountSubIsland.h  FindEventualSafeStates.h  MaxAreaOfIsland.cpp  MaxAreaOfIsland.h  MinimumJumpsToReachHome.cpp  MinimumJumpsToReachHome.h  NumberOfClosedIslands.h  NumberOfIslands.cpp  NumberOfProvinces.h  ReverseOddLevelsOfBinaryTree.cpp
cpp-solutions/src/main/c++/dp/: BestTimeToBuyAndSellStockWithCooldown.cpp  BestTimeToBuyAndSellStockWithCooldown.h  LongestNonDecreasingSubarrayFromTwoArrays.h  MaximumSumCircularSubarray.h  SolvingQuestionsWithBrainpower.cpp  UncrossedLines.cpp
cpp-solutions/src/main/c++/hashtable/: CountNumberOfDistinctIntegersAfterReverseOperations.cpp  MostFrequentEvenElement.cpp
cpp-solutions/src/main/c++/linkedlist/: DeleteTheMiddleNodeOfLinkedList.cpp  DeleteTheMiddleNodeOfLinkedList.h
cpp-solutions/src/main/c++/math/: AngleBetweenHandsOfClock.cpp  AngleBetweenHandsOfClock.h  FindTheLargestAreaOfSquareInsideTwoRectangles.h  MinimumAdditionToMakeIntegerBeautiful.cpp  MinimumAdditionToMakeIntegerBeautiful.h  PowerOfThree.h  QueriesOfNumberOfPointsInsideACircle.cpp  QueriesOfNumberOfPointsInsideACircle.h  ReorderedPowerOfTwo.h  WaterAndJugProblem.h  XofKindDeckOfCards.cpp  XofKindDeckOfCards.h
cpp-solutions/src/main/c++/matrix/: ImageSmoother.cpp  MaxIncreaseToKeepCitySkyline.h  NumberOfLaserBeamsInABank.cpp
cpp-solutions/src/main/c++/prefixsum/: MinimumSubsequenceInNonIncreasingOrder.cpp
cpp-solutions/src/main/c++/simulation/: AvailableCapturesForRook.cpp  CountUnguardedCellsInTheGrid.cpp  FindWinnerOnTicTacToeGame.cpp  MaximumNumberOfCoinsYouCanGet.h
cpp-solutions/src/main/c++/slidingwindow/: LongestSubarrayOf1sAfterDeletingOneElement.cpp  LongestSubstringWithAtMostTwoDistinctCharacters.cpp
cpp-solutions/src/main/c++/sorting/: FindTheNumberOfWaysToPlacePeople.cpp  FindTheNumberOfWaysToPlacePeople.h  HIndex.h  MaximumMatchingOfPlayersWithTrainers.h
cpp-solutions/src/main/c++/string/: BreakPalindrome.cpp  BreakPalindrome.h  CheckIfTheSentenceIsPangram.cpp  CrawlerLogFolder.cpp  DivideStringIntoGroupsOfSizeK.cpp  IncreasingDecreasingString.cpp  IncreasingDecreasingString.h  LengthOfTheLongestAlphabeticalContinuousSubstring.cpp  NumberOfValidClockTimes.h  OptimalPartitionOfString.cpp  OptimalPartitionOfString.h  RemoveOutermostParentheses.h  WordsWithinTwoEditsOfDictionary.cpp  WordsWithinTwoEditsOfDictionary.h
cpp-solutions/src/main/c++/structures/: ListNode.h  TreeNode.h
cpp-solutions/src/main/c++/tree/: BinaryTreeLongestConsecutiveSequence.cpp  BinaryTreeLongestConsecutiveSequence.h  CheckIfStringIsValidSequenceFromRootToLeavesPath.cpp  CountUniValueSubtrees.cpp  CountUniValueSubtrees.h
cpp-solutions/src/main/c++/unionfind/: NumberOfConnectedComponentsInAnUndirectedGraph.h  NumberOfOperationsToMakeNetworkConnected.cpp  RedundantConnection.h  SatisfiabilityOfEqualityEquations.cpp  SatisfiabilityOfEqualityEquations.h  SentenceSimilarityII.cpp
j-algorithms/: pom.xml
j-algorithms/src/main/java/: Solution.java
java-solutions/: pom.xml
java-solutions/src/main/java/: Solution.java
python-solutions/: pom.xml
python-solutions/src/main/: twosum.py
python-solutions/src/main/python/: Solution.py
src/main/java/: Solution.java
src/main/java/array/: Convert1DArrayInto2DArray.java  DetectPatternOfLengthMRepeatedK.java  Finding3DigitEvenNumbers.java  GetMaximumInGeneratedArray.java  IncreasingTripletSubsequence.java
src/main/java/backtracking/: NonDecreasingSubsequences.java
src/main/java/bfs/: NearestExitFromEntranceInMaze.java  OpenTheLock.java
src/main/java/binarysearch/: LeftmostColumnWithAtLeastAOne.java  MinimumOperationsToMakeAllArrayElementsEqual.java  SuccessfulPairsOfSpellsAndPotions.java
src/main/java/bitmanipulation/: FindTheOriginalArrayOfPrefixXOR.java
src/main/java/design/: OrderedStream.java  RecentCounter.java
src/main/java/dfs/: CountServersThatCommunicate.java  CountSubIslands.java  FloodFill.java  JumpGameIII.java  MaxAreaOfIsland.java  NumberOfClosedIslands.java  NumberOfIslands.java  NumberOfProvinces.java  ReverseOddLevelsOfBinaryTree.java  WhereWillTheBallFall.java
src/main/java/greedy/: FrogJumpII.java  MaximalScoreAfterApplyingKOperations.java
src/main/java/hashtable/: CountNumberOfDistinctIntegerAfterReverseOperation.java
src/main/java/linkedlist/: DeleteTheMiddleNodeOfLinkedList.java
src/main/java/math/: ClosestPrimeNumbersInRange.java  IntegerToRoman.java  MinimumAdditionToMakeIntegerBeautiful.java  QueriesOnNumberOfPointsInsideACircle.java  ReorderedPowerOfTwo.java  WaterAndJugProblem.java  XofKindInDeckOfCards.java
src/main/java/matrix/: CellsWithOddValuesInMatrix.java  DiagonalTraverse.java  ImageSmoother.java  MatrixCellsInDistanceOrder.java  (+3 more)
(+246 files in other folders)
