cmake_minimum_required(VERSION 3.23)
project(c_algorithms)

set(CMAKE_CXX_STANDARD 14)

include_directories(src/main/c++)
include_directories(src/main/c++/array)
include_directories(src/main/c++/bfs)
include_directories(src/main/c++/binarysearch)
include_directories(src/main/c++/bitmanipulation)
include_directories(src/main/c++/design)
include_directories(src/main/c++/dfs)
include_directories(src/main/c++/hashtable)
include_directories(src/main/c++/linkedlist)
include_directories(src/main/c++/math)
include_directories(src/main/c++/matrix)
include_directories(src/main/c++/prefixsum)
include_directories(src/main/c++/simulation)
include_directories(src/main/c++/slidingwindow)
include_directories(src/main/c++/sorting)
include_directories(src/main/c++/string)
include_directories(src/main/c++/structures)
include_directories(src/main/c++/tree)
include_directories(src/main/c++/unionfind)

add_executable(c_algorithms
        src/main/c++/array/Convert1DArrayInto2DArray.cpp
        src/main/c++/array/Convert1DArrayInto2DArray.h
        src/main/c++/array/DefuseTheBomb.cpp
        src/main/c++/array/DefuseTheBomb.h
        src/main/c++/array/Finding3DigitEvenNumbers.cpp
        src/main/c++/array/Finding3DigitEvenNumbers.h
        src/main/c++/array/FindSubarraysWithEqualSum.cpp
        src/main/c++/array/FindSubarraysWithEqualSum.h
        src/main/c++/array/GetMaximumInGeneratedArray.cpp
        src/main/c++/array/GetMaximumInGeneratedArray.h
        src/main/c++/array/IncreasingTripletSubsequence.cpp
        src/main/c++/array/IncreasingTripletSubsequence.h
        src/main/c++/array/MedianOfTwoSortedArrays.cpp
        src/main/c++/array/MedianOfTwoSortedArrays.h
        src/main/c++/array/SmallestRangeI.h
        src/main/c++/bfs/NearestExitFromEntranceInMaze.h
        src/main/c++/binarysearch/LeftmostColumnWithAtLeastAOne.h
        src/main/c++/binarysearch/MinimumOperationsToMakeAllArrayElementsEqual.h
        src/main/c++/binarysearch/SuccessfulPairsOfSpellsAndPotions.h
        src/main/c++/bitmanipulation/FindTheOriginalArrayOfPrefixXOR.h
        src/main/c++/design/OrderedStream.h
        src/main/c++/design/PhoneDirectory.cpp
        src/main/c++/design/PhoneDirectory.h
        src/main/c++/design/TicTacToe.cpp
        src/main/c++/design/TicTacToe.h
        src/main/c++/dfs/AllPathsFromSourceToTarget.h
        src/main/c++/dfs/CheckKnightTourConfiguration.h
        src/main/c++/dfs/CountServersThatCommunicate.h
        src/main/c++/dfs/CountSubIsland.h
        src/main/c++/dfs/FindEventualSafeStates.h
        src/main/c++/dfs/FloodFill.h
        src/main/c++/dfs/JumpGameIII.h
        src/main/c++/dfs/KeysAndRooms.h
        src/main/c++/dfs/MaxAreaOfIsland.h
        src/main/c++/dfs/MinimumGeneticMutation.h
        src/main/c++/dfs/MinimumJumpsToReachHome.h
        src/main/c++/dfs/NumberOfClosedIslands.h
        src/main/c++/dfs/NumberOfIslands.h
        src/main/c++/dfs/NumberOfProvinces.h
        src/main/c++/dfs/ReverseOddLevelsOfBinaryTree.h
        src/main/c++/hashtable/CountNumberOfDistinctIntegersAfterReverseOperations.cpp
        src/main/c++/hashtable/CountNumberOfDistinctIntegersAfterReverseOperations.h
        src/main/c++/hashtable/LargestPositiveIntegerThatExistsWithItsNegative.cpp
        src/main/c++/hashtable/LargestPositiveIntegerThatExistsWithItsNegative.h
        src/main/c++/hashtable/MostFrequentEvenElement.cpp
        src/main/c++/hashtable/MostFrequentEvenElement.h
        src/main/c++/linkedlist/DeleteTheMiddleNodeOfLinkedList.h
        src/main/c++/math/LargestPerimeterTriangle.h
        src/main/c++/math/MinimumAdditionToMakeIntegerBeautiful.h
        src/main/c++/math/PowerOfThree.h
        src/main/c++/math/QueriesOfNumberOfPointsInsideACircle.h
        src/main/c++/math/ReorderedPowerOfTwo.h
        src/main/c++/math/WaterAndJugProblem.h
        src/main/c++/math/XofKindDeckOfCards.h
        src/main/c++/matrix/CellsWithOddValuesInAMatrix.h
        src/main/c++/matrix/DiagonalTraverse.h
        src/main/c++/matrix/ImageSmoother.h
        src/main/c++/matrix/MaximumSumOfAnHourglass.h
        src/main/c++/matrix/MaxIncreaseToKeepCitySkyline.h
        src/main/c++/matrix/NumberOfLaserBeamsInABank.h
        src/main/c++/prefixsum/MinimumSubsequenceInNonIncreasingOrder.h
        src/main/c++/prefixsum/WidestPairOfIndicesWithEqualRangeSum.h
        src/main/c++/simulation/AvailableCapturesForRook.h
        src/main/c++/simulation/AverageWaitingTime.h
        src/main/c++/simulation/CountUnguardedCellsInTheGrid.h
        src/main/c++/simulation/FindWinnerOnTicTacToeGame.h
        src/main/c++/simulation/IncrementalMemoryLeak.h
        src/main/c++/simulation/MaximumNumberOfCoinsYouCanGet.h
        src/main/c++/slidingwindow/LongestSubstringWithAtMostTwoDistinctCharacters.h
        src/main/c++/sorting/MaximumMatchingOfPlayersWithTrainers.h
        src/main/c++/string/BreakPalindrome.h
        src/main/c++/string/CheckDistancesBetweenSameLetter.h
        src/main/c++/string/CheckIfTheSentenceIsPangram.h
        src/main/c++/string/CrawlerLogFolder.h
        src/main/c++/string/DivideStringIntoGroupsOfSizeK.h
        src/main/c++/string/IncreasingDecreasingString.h
        src/main/c++/string/LengthOfTheLongestAlphabeticalContinuousSubstring.h
        src/main/c++/string/MinimumChangesToMakeAlternatingBinaryString.h
        src/main/c++/string/NumberOfValidClockTimes.h
        src/main/c++/string/OptimalPartitionOfString.h
        src/main/c++/string/RemoveOutermostParentheses.h
        src/main/c++/string/WordsWithinTwoEditsOfDictionary.h
        src/main/c++/structures/ListNode.h
        src/main/c++/structures/TreeNode.h
        src/main/c++/tree/BinaryTreeLongestConsecutiveSequence.h
        src/main/c++/tree/CheckIfStringIsValidSequenceFromRootToLeavesPath.h
        src/main/c++/tree/CountUniValueSubtrees.h
        src/main/c++/unionfind/NumberOfConnectedComponentsInAnUndirectedGraph.h
        src/main/c++/unionfind/NumberOfOperationsToMakeNetworkConnected.h
        src/main/c++/unionfind/RedundantConnection.h
        src/main/c++/unionfind/SatisfiabilityOfEqualityEquations.h
        src/main/c++/unionfind/SentenceSimilarityII.h
        src/main/c++/Solution.cpp
        src/main/c++/Solution.h
        src/main/c++/slidingwindow/LongestSubarrayOf1sAfterDeletingOneElement.h
        src/main/c++/array/MaximumSumWithExactlyKElements.cpp
        src/main/c++/array/MaximumSumWithExactlyKElements.h
        src/main/c++/array/DetermineTheWinnerOfBowlingGame.cpp
        src/main/c++/array/DetermineTheWinnerOfBowlingGame.h
        src/main/c++/array/NumberOfAdjacentElementsWithTheSameColor.h src/main/c++/sorting/HIndex.h src/main/c++/dp/UncrossedLines.h src/main/c++/array/FindThePrefixCommonArrayOfTwoArrays.cpp src/main/c++/array/FindThePrefixCommonArrayOfTwoArrays.h src/main/c++/dp/SolvingQuestionsWithBrainpower.h
        src/main/c++/dp/BestTimeToBuyAndSellStockWithCooldown.h)
