cmake_minimum_required(VERSION 3.23)
project(c_algorithms)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(array)
include_directories(bfs)
include_directories(binarysearch)
include_directories(bitmanipulation)
include_directories(design)
include_directories(dfs)
include_directories(hashtable)
include_directories(linkedlist)
include_directories(math)
include_directories(matrix)
include_directories(prefixsum)
include_directories(simulation)
include_directories(slidingwindow)
include_directories(sorting)
include_directories(string)
include_directories(structures)
include_directories(tree)
include_directories(unionfind)
include_directories(dp)

add_executable(c_algorithms
        array/Convert1DArrayInto2DArray.h
        array/DefuseTheBomb.h
        array/Finding3DigitEvenNumbers.h
        array/FindSubarraysWithEqualSum.h
        array/GetMaximumInGeneratedArray.h
        array/IncreasingTripletSubsequence.h
        array/MedianOfTwoSortedArrays.h
        array/SmallestRangeI.h
        bfs/NearestExitFromEntranceInMaze.h
        binarysearch/LeftmostColumnWithAtLeastAOne.h
        binarysearch/MinimumOperationsToMakeAllArrayElementsEqual.h
        binarysearch/SuccessfulPairsOfSpellsAndPotions.h
        bitmanipulation/FindTheOriginalArrayOfPrefixXOR.h
        design/OrderedStream.h
        design/PhoneDirectory.h
        design/TicTacToe.h
        dfs/AllPathsFromSourceToTarget.h
        dfs/CheckKnightTourConfiguration.h
        dfs/CountServersThatCommunicate.h
        dfs/CountSubIsland.h
        dfs/FindEventualSafeStates.h
        dfs/FloodFill.h
        dfs/JumpGameIII.h
        dfs/KeysAndRooms.h
        dfs/MaxAreaOfIsland.h
        dfs/MinimumGeneticMutation.h
        dfs/MinimumJumpsToReachHome.h
        dfs/NumberOfClosedIslands.h
        dfs/NumberOfIslands.h
        dfs/NumberOfProvinces.h
        dfs/ReverseOddLevelsOfBinaryTree.h
        hashtable/CountNumberOfDistinctIntegersAfterReverseOperations.h
        hashtable/LargestPositiveIntegerThatExistsWithItsNegative.h
        hashtable/MostFrequentEvenElement.h
        linkedlist/DeleteTheMiddleNodeOfLinkedList.h
        math/LargestPerimeterTriangle.h
        math/MinimumAdditionToMakeIntegerBeautiful.h
        math/PowerOfThree.h
        math/QueriesOfNumberOfPointsInsideACircle.h
        math/ReorderedPowerOfTwo.h
        math/WaterAndJugProblem.h
        math/XofKindDeckOfCards.h
        matrix/CellsWithOddValuesInAMatrix.h
        matrix/DiagonalTraverse.h
        matrix/ImageSmoother.h
        matrix/MaximumSumOfAnHourglass.h
        matrix/MaxIncreaseToKeepCitySkyline.h
        matrix/NumberOfLaserBeamsInABank.h
        prefixsum/MinimumSubsequenceInNonIncreasingOrder.h
        prefixsum/WidestPairOfIndicesWithEqualRangeSum.h
        simulation/AvailableCapturesForRook.h
        simulation/AverageWaitingTime.h
        simulation/CountUnguardedCellsInTheGrid.h
        simulation/FindWinnerOnTicTacToeGame.h
        simulation/IncrementalMemoryLeak.h
        simulation/MaximumNumberOfCoinsYouCanGet.h
        slidingwindow/LongestSubstringWithAtMostTwoDistinctCharacters.h
        sorting/MaximumMatchingOfPlayersWithTrainers.h
        string/BreakPalindrome.h
        string/CheckDistancesBetweenSameLetter.h
        string/CheckIfTheSentenceIsPangram.h
        string/CrawlerLogFolder.h
        string/DivideStringIntoGroupsOfSizeK.h
        string/IncreasingDecreasingString.h
        string/LengthOfTheLongestAlphabeticalContinuousSubstring.h
        string/MinimumChangesToMakeAlternatingBinaryString.h
        string/NumberOfValidClockTimes.h
        string/OptimalPartitionOfString.h
        string/RemoveOutermostParentheses.h
        string/WordsWithinTwoEditsOfDictionary.h
        structures/ListNode.h
        structures/TreeNode.h
        tree/BinaryTreeLongestConsecutiveSequence.h
        tree/CheckIfStringIsValidSequenceFromRootToLeavesPath.h
        tree/CountUniValueSubtrees.h
        unionfind/NumberOfConnectedComponentsInAnUndirectedGraph.h
        unionfind/NumberOfOperationsToMakeNetworkConnected.h
        unionfind/RedundantConnection.h
        unionfind/SatisfiabilityOfEqualityEquations.h
        unionfind/SentenceSimilarityII.h
        Solution.cpp
        Solution.h
        slidingwindow/LongestSubarrayOf1sAfterDeletingOneElement.h
        array/MaximumSumWithExactlyKElements.h
        array/DetermineTheWinnerOfBowlingGame.h
        array/NumberOfAdjacentElementsWithTheSameColor.h sorting/HIndex.h dp/UncrossedLines.h array/FindThePrefixCommonArrayOfTwoArrays.h dp/SolvingQuestionsWithBrainpower.h
        dp/BestTimeToBuyAndSellStockWithCooldown.h
        dp/MaximumSumCircularSubarray.h
        math/FindTheLargestAreaOfSquareInsideTwoRectangles.h)
